<resources>
    <string name="app_name">Jiffy</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="mobile_no_hint">Mobile Number</string>
    <string name="Login">Login</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="submit">Submit</string>
    <string name="resend_code_in">Resend code in :\u0020</string>
    <string name="resend"> <u> Resend code</u>  </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="subscription">Subscription</string>
    <string name="my_order">My Order</string>
    <string name="wallet">Wallet</string>
    <string name="coupons">Coupons</string>
    <string name="support">Support</string>
    <string name="log_out">Log out</string>

    //facebook srings


    <!--    <string name="google_maps_key">AIzaSyCtX5HWyiHVFkKRVgA3h7PORmE6bWFZiSo</string>-->
    <string name="google_maps_key">AIzaSyDaj4C4XpFb8u49o_0kEXLSVg8RbpHRnDU</string>

    <!--    <string name="facebook_app_id">3206704699392093</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb3206704699392093</string>-->
    <string name="facebook_app_id">734860730624709</string>
    <string name="fb_login_protocol_scheme">fb734860730624709</string>


    <string name="fresh_chat_app_id" translatable="false">678efe6c-f408-4f38-979f-7417063520f0</string>
    <string name="fresh_chat_app_key" translatable="false">c0c13e24-5f17-4555-bdf4-e2739e8ecaab</string>
    <string name="freshchat_file_provider_authority">in.jiffycharge.gopower.provider</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_history">Transaction History</string>
    <string name="swipe_up_to_see_all_transactions">Swipe up to see all transactions</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_user">ALREADY USER</string>
    <string name="i_have_read_and_agree_with">I have read and agree with</string>
    <string name="registration_agreement"><u> registration Agreement</u></string>
    <string name="fee">Fee</string>
    <string name="no_transaction_history">No Transaction History</string>
    <string name="no_data_found">No Data</string>
    <string name="top_up">TOP UP</string>
    <string name="feedback">Feedback</string>
    <string name="upload_photos">Upload photos</string>
    <string name="you_have_unpaid_order">You have unpaid Order !</string>
    <string name="please_pay_first">Please pay first</string>
    <string name="pay_now">Pay Now</string>
    <string name="you_have_not_paid_the_deposit_yet">You have not paid the deposit yet !</string>
    <string name="pay_deposit">Pay Refundable Deposit</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="device_name">Device Name</string>
    <string name="duration">Duration</string>
    <string name="rupee">₹</string>
    <string name="min">min</string>
    <string name="order_number">Enter Order Number</string>
    <string name="please_leave_your_comment_here">Please leave your comment here</string>
    <string name="please_select_issue_type">Please select issue type</string>
    <string name="android">Android</string>
    <string name="return_amp_pay"><![CDATA[Return & Pay]]></string>
    <string name="total_fee">Total Fee</string>
    <string name="duration_of_usage">Duration of Usage</string>
    <string name="my_offer">My Offer</string>
    <string name="no_available_offers">No available offers</string>
    <string name="order_details">Order details</string>
    <string name="view">View</string>
    <string name="my_wallet">My Wallet</string>
    <string name="pay">Pay</string>
    <string name="referral_code">Referral Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_funds">+ Add Funds</string>
    <string name="razo_key_id">rzp_test_YeQ6LGSXqFCfrm</string>


</resources>
